examples/invalid_crypto_boundaries/execution_enabled.argx
module m
crypto sha256 { kind hash status allowed strength classical purpose ["digest"] output_bits 256 }
crypto_boundary Bad {
  allowed_hashes ["sha256"]
  key_material denied
  secret_material denied
  execution enabled
  purpose ["test"]
}
